[gd_scene load_steps=10 format=3 uid="uid://c4u75bhoaj37n"]

[ext_resource type="Script" path="res://Scripts/Game_Over_Menu.gd" id="1_ndlmb"]
[ext_resource type="Shader" path="res://Shaders/blur.gdshader" id="2_ixcch"]
[ext_resource type="PackedScene" uid="uid://c4ak3ly5n4yiy" path="res://Scenes/Options_Menu.tscn" id="3_xndjc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ea4gg"]
shader = ExtResource("2_ixcch")
shader_parameter/lod = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_twbpp"]
font_size = 46

[sub_resource type="LabelSettings" id="LabelSettings_mx0ha"]
font_size = 34

[sub_resource type="Animation" id="Animation_lhjhf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xtiet"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5vfdd"]
_data = {
"RESET": SubResource("Animation_lhjhf"),
"blur": SubResource("Animation_xtiet")
}

[node name="GameOverMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ndlmb")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ea4gg")
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.0
offset_top = -274.0
offset_right = 313.0
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver" type="Label" parent="Panel"]
layout_mode = 2
offset_top = 30.0
offset_right = 626.0
offset_bottom = 94.0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_twbpp")
horizontal_alignment = 1

[node name="BestWave" type="Label" parent="Panel"]
layout_mode = 2
offset_top = 106.0
offset_right = 626.0
offset_bottom = 170.0
text = "Best wave : 69"
label_settings = SubResource("LabelSettings_mx0ha")
horizontal_alignment = 1

[node name="Wave" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 1.0
offset_top = 170.0
offset_right = 627.0
offset_bottom = 234.0
text = "Wave : 69"
label_settings = SubResource("LabelSettings_mx0ha")
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = -18.0
offset_right = 167.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Retry"

[node name="MenuButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = 107.0
offset_right = 167.0
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5vfdd")
}

[node name="OptionsMenu" parent="." instance=ExtResource("3_xndjc")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Panel/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Panel/MenuButton" to="." method="_on_menu_button_pressed"]
